<resources>
    <!--  fragment's labels  -->
    <string name="first_screen_label" translatable="false">first_screen</string>
    <string name="device_list_label" translatable="false">device_list</string>
    <string name="game_lobby_label" translatable="false">game_lobby</string>
    <string name="canvas_current_player_label" translatable="false">canvas_current_player</string>
    <string name="canvas_other_player_label" translatable="false">canvas_other_player</string>
    <string name="match_results_label" translatable="false">match_results</string>
    <string name="game_over_label" translatable="false">game_over</string>
    <string name="word_list_label" translatable="false">word_list</string>
    <string name="new_word_label" translatable="false">new_word</string>
    <string name="choose_word_label" translatable="false">choose_word</string>
    <string name="partial_results_label" translatable="false">partial_results</string>
    <string name="loading_label" translatable="false">loading</string>

    <!-- strings -->
    <string name="app_name">GuessMyDraw</string>
    <string name="on_off_button">On/Off</string>
    <string name="discover_button">Ricerca Giocatore</string>
    <string name="p2p_off_warning">Abilita il WiFi Direct dalle impostazioni.</string>
    <string name="conferm_disconnection">Vuoi scollegarti dall\'attuale dispositivo e tornare alla lista dei dispositivi disponibili?</string>
    <string name="yes">Si</string>
    <string name="cancel">Annulla</string>
    <string name="list_empty">In attesa di giocatori nelle vicinanze…</string>
    <string name="Lobby">Lobby</string>
    <string name="guess_my_draw">Guess My Draw!!!</string>
    <string name="p2p_disconnection">L\'avversario ha abbandonato la partita.</string>
    <string name="p2p_already_connected">Sei già connesso con un dispositivo. Disconnettiti prima di procedere.</string>
    <string name="reload">Ricarica</string>
    <string name="start_game">Gioca</string>
    <string name="draw_role">Disegnare</string>
    <string name="guess">Indovinare</string>
    <string name="answer_hint">Risposta…</string>
    <string name="player_name_hint">Nome giocatore</string>
    <string name="add_word">Aggiungi una parola</string>
    <string name="show_word_list">lista di parole</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Salva</string>
    <string name="empty_word_not_saved">Non puoi salvare una stringa vuota</string>
    <string name="choose_word">Scegli una parola</string>
    <string name="your_turn">E\' il tuo turno per:</string>
    <string name="button_send">Invia</string>
    <string name="return_to_lobby">Torna alla lobby</string>
    <string name="partial_results">Risultati parziali</string>
    <string name="loading_text">Caricamento…</string>
    <string name="insert_name_string">Inserisci prima il nome che userai durante la partita</string>
    <string name="end_match">Termina partita</string>
    <string name="return_to_first_screen">Schermata principale</string>
    <string name="you_win">Hai Vinto!</string>
    <string name="draw_text">Pareggio.</string>
    <string name="defeat_text">Peccato, Hai perso…</string>
    <string name="word_hint">Nuova parola…</string>
    <string name="gps_required">Per trovare un giocatore nei paraggi è necessario attivare il GPS del dispositivo.</string>
    <string name="opponent_guessed">Il tuo avversario ha indovinato!</string>
    <string name="starting_discovery">Inizio ricerca</string>
    <string name="discovery_failed">Ricerca fallita, fai uno swipe verso il basso per aggiornare.</string>
    <string name="opponent_did_not_guess">Il tuo avversario non ha indovinato.</string>
    <string name="Timer_expired">Tempo scaduto.</string>
    <string name="you_guessed">Hai indovinato!!!</string>
    <string name="retry">Riprova</string>
    <string name="end_match_request_reached">Numero di richieste per terminare la partita raggiunte.</string>
    <string name="connecting">Connessione in corso…</string>
    <string name="connection_failed">Connessione fallita, riprova.</string>
    <string name="missing_requirements">il dispositivo non supporta tutti i requisiti necessari.</string>
</resources>