<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FirstScreen">

    <TextView
        android:id="@+id/loading_text"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/guess_my_draw"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/discover_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/discover_button"
        app:layout_constraintBottom_toTopOf="@id/show_word_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/show_word_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_word_list"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>