<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/lobby_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/Lobby"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/your_turn"
        android:layout_marginBottom="@dimen/padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/role_text"/>

    <TextView
        android:id="@+id/role_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:padding="10dp"
        android:gravity="center"
        tools:text="Disegnare/Indovinare"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:gravity="center"
        tools:text="parola"
        android:layout_marginTop="@dimen/padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/role_text"/>

    <Button
        style="@style/button"
        android:id="@+id/choose_word_button"
        android:tag="choose_word_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/play_button" />

    <Button
        style="@style/button"
        android:id="@+id/play_button"
        android:tag="play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>